--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "npm run build && node build/index.js",
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix",
-    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "test": "jest",
+    "test:dev": "jest --watchAll"
   },
   "husky": {
     "hooks": {
@@ -20,17 +22,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.6",
-    "@types/http-errors": "^1.6.3",
-    "@types/morgan": "^1.9.0",
+    "@types/jest": "^25.2.1",
+    "@types/supertest": "^2.0.8",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-errors": "^1.7.3",
-    "morgan": "^1.10.0",
+    "jest": "^25.4.0",
+    "supertest": "^4.0.2",
     "ts-node": "^8.7.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
+    "@types/http-errors": "^1.6.3",
     "@types/node": "^13.9.2",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
